<resources>
    <string name="app_name">a3</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="member_login">Already a member? Login</string>
    <string name="logout">Logout</string>
    <string name="all_flights">Flights</string>
    <string name="user_orders">Your Orders</string>
    <string name="date_select">Select a date</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="from_where">From where?</string>
    <string name="where_to">Where to?</string>
    <string name="search">Search</string>
    <string name="finalize">Finalize order</string>
    <string name="b_f">Back and Forth</string>
</resources>
